--- a/theme/snippets/jumplink-iconset.liquid
+++ b/theme/snippets/jumplink-iconset.liquid
@@ -1,5 +1,7 @@
 {% assign snippet = name | prepend: 'jumplink-iconset-' %}
 
+{% assign class = '' %}
+
 {% if direction == 'left' %}
 {% endif %}
 
