--- a/theme/templates/cart.liquid
+++ b/theme/templates/cart.liquid
@@ -3,7 +3,7 @@
     <div class="row">
 
       <div class="hidden-xs hidden-sm col-md-3 col-lg-2 border right px-1 table-color">
-        <h3 class="text-weight-normal ">Wie wäre's noch mit ...</h3>
+        <h3 class="text-weight-normal text-size-1-5">Wie wäre's noch mit ...</h3>
         <div class="p-r-1">
           <div class="row">
             <div recomatic="cart" shop="{{shop.permanent_domain}}" product_ids="{{cart.items|map:'product'|map:'id'|join:','}}"></div>
