--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -1,3 +1,12 @@
 html, body {
     height: 100%;
 }
+
+body {
+    // overflow-x: hidden !important;
+    overflow-y: scroll !important;
+}
+
+.barba-container {
+    // width: 100vw;
+}
