--- a/src/scss/theme-test.scss
+++ b/src/scss/theme-test.scss
@@ -19,7 +19,7 @@
 @import '../../bower_components/jumplink-components/scss/images';
 @import '../../bower_components/jumplink-components/scss/positions';
 @import '../../bower_components/jumplink-components/scss/colors';
-@import '../../bower_components/jumplink-components/scss/efects';
+@import '../../bower_components/jumplink-components/scss/effects';
 @import '../../bower_components/jumplink-components/scss/backgrounds';
 @import '../../bower_components/jumplink-components/scss/navbar';
 @import '../../bower_components/jumplink-components/scss/carousel';
@@ -44,6 +44,7 @@
 @import 'breadcrumbs';
 @import 'forms';
 @import 'iconset';
+@import 'modal';
 
 @import 'customers-login-register';
 @import 'list-collections';
