--- a/theme/snippets/jumplink-product-photo-modal.liquid
+++ b/theme/snippets/jumplink-product-photo-modal.liquid
@@ -1,38 +1,29 @@
-<div class="modal fade modal-fullscreen product-photo-modal" id="product-photo-modal-{{product.handle}}" tabindex="-1" role="dialog">
+<div class="modal modal-fullscreen product-photo-modal" id="product-photo-modal-{{product.handle}}" tabindex="-1" role="dialog">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content" data-area="slick" data-target="#product-photo-modal-{{product.handle}} .slick-slider">
             <div class="modal-body">
-                <div class="container">
-                    <div class="row">
-                        <div class="hidden-xs-up col-sm-2 col-md-2 col-lg-1 pt-1">
-                            {% for image in product.images %}
-                                <div class="mb-1">
-                                    <div data-index="{{ forloop.index0 }}" class="modal-thumb">
-                                        <div class="background-box {{ settings.products_aspect_ratio }}" style="background-image: url({{ image | img_url: 'grande' }});" title="{{ image.alt | escape }}"></div>
-                                    </div>
-                                </div>
-                            {% endfor %}
-                        </div>
 
-                        <div class="col-xs-12 col-sm-10 col-md-10 col-lg-11">
-                            <div class="product-photo-modal">
-                                {% for image in product.images %}
-                                    <a class="product-photo-modal-item">
-                                        <div class="background-box {{ settings.products_aspect_ratio }}" style="background-image: url({{ image | img_url: 'master' }});" title="{{ image.alt | escape }}"></div>
-                                        {% if settings.products_show_page_number_in_carousel %}
-                                            <div class="carousel-caption bottom right">
-                                                <div class="carousel-caption-wrapper">
-                                                    {{ forloop.index }}/{{ forloop.length }}
-                                                </div>
-                                            </div>
-                                        {% endif %}
-                                    </a>
-                                {% endfor %}
-                            </div>
-                            <button type="button" class="slick-modal-close slick-arrow" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <div class="slick-slider">
+                    {% for image in product.images %}
+                        <div class="wrapper">
+                            <img src="{{ image | img_url: 'master' }}" class="height-fullscreen mx-auto" alt="{{ image.alt | escape }}" />
                         </div>
-                    </div>
+                    {% endfor %}
                 </div>
+
+                <div class="arrow-left" data-slick-method="slickPrev" data-target="#product-photo-modal-{{product.handle}} .slick-slider">
+                    {% include 'jumplink-iconset', name: 'arrow-big', direction: 'left', color: 'white' %}
+                </div>
+
+                <div class="arrow-right" data-slick-method="slickNext" data-target="#product-photo-modal-{{product.handle}} .slick-slider">
+                    {% include 'jumplink-iconset', name: 'arrow-big', direction: 'right', color: 'white' %}
+                </div>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    {% include 'jumplink-iconset', name: 'x', color: 'white' %}
+                </button>
+                
+
             </div>
         </div>
     </div>
