--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -11814,6 +11814,7 @@ b, strong {
 }
 .btn {
     text-transform: uppercase;
+    cursor: pointer;
     &:focus {
         box-shadow: none !important;
     }
@@ -11977,17 +11978,33 @@ b, strong {
         }
     }
 }
-.product-price {
-    font-weight: bold;
-    letter-spacing: 0.1rem;
-}
+[data-namespace="product"] {
+    .product-price {
+        font-weight: bold;
+        letter-spacing: 0.1rem;
+    }
 
-.product-photo-carousel-arrows {
-    .iconset {
-        padding: 0.5rem;
-        cursor: pointer;
+    .product-photo-carousel-arrows {
+        .iconset {
+            padding: 0.5rem;
+            cursor: pointer;
+        }
+    }
+
+    .lead {
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 1em;
+    }
+    .iconset.arrow {
+        margin-left: 0;
+        svg {
+            height: 10px;
+        }
     }
 }
+
+
 [data-collection-filter] {
     @include media-breakpoint-up(md) {
         @include vp-position(fixed);
