Show/Hide Colorcard

--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -24,3 +24,8 @@
     }
 }
 
+[data-colorcard="placeholder"],
+[data-colorcard="placed"] {
+    background-size: cover;
+    background-position: center center;
+}
