--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -12004,7 +12004,10 @@ b, strong {
     }
 }
 
-
+[data-colorcard="placeholder"] {
+    background-size: cover;
+    background-position: center center;
+}
 [data-collection-filter] {
     @include media-breakpoint-up(md) {
         @include vp-position(fixed);
