--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -70,6 +70,7 @@
         data-product-json-string='{{product | json | replace: "'", "&#39;"}}'
         data-product-metafields-bold_loyalties-json-string='{{product.metafields.bold_loyalties | json | replace: "'", "&#39;"}}'
         data-product-metafields-global-json-string='{{product.metafields.global | json | replace: "'", "&#39;"}}'
+        data-product-image-last='{{ product.images.last.src | img_url: "master" }}'
 
         {% if collection.previous_product %}
           data-product-prev-url="{{collection.previous_product}}"
