--- a/theme/snippets/jumplink-product-photo-carousel.liquid
+++ b/theme/snippets/jumplink-product-photo-carousel.liquid
@@ -1,26 +1,35 @@
 {% comment %}
     Carousel
 {% endcomment %}
-<div class="row">
+<div class="row" data-colorcard="placeholder">
     <div class="hidden-sm-down col-sm-2">
         <div class="mb-1">
             <div class="product-photo-carousel-arrows d-flex justify-content-between">
                 {% comment %}
                     @see https://github.com/kenwheeler/slick#methods
                 {% endcomment %}
-                <div data-slick-method="slickPrev" data-slick-target="#product-photo-carousel-{{product.handle}}">
+                <div data-slick-method="slickPrev" data-target="#product-photo-carousel-{{product.handle}}">
                     {% include 'jumplink-iconset', name: 'arrow-big', direction: 'left', color: 'black' %}
                 </div>
-                <div data-slick-method="slickNext" data-slick-target="#product-photo-carousel-{{product.handle}}">
+                <div data-slick-method="slickNext" data-target="#product-photo-carousel-{{product.handle}}">
                     {% include 'jumplink-iconset', name: 'arrow-big', direction: 'right', color: 'black' %}
                 </div>
             </div>
         </div>
+
         {% for image in product.images %}
-            <div class="mb-1">
-                <div data-index="{{ forloop.index0 }}" class="thumb">
+            {% if forloop.last %}
+                {% comment %} This is the Colorcard {% endcomment %}
+            {% else %}
+                <div data-index="{{ forloop.index0 }}" class="thumb mb-1">
                     <div class="background-box {{settings.products_aspect_ratio}}" style="background-image: url({{ image | img_url: 'grande' }});" title="{{ image.alt | escape }}"></div>
                 </div>
+            {% endif %}
+        {% else %}
+            <div class="mb-1">
+               <div data-index="{{ forloop.index0 }}" class="thumb">
+                  <div class="background-box {{settings.products_aspect_ratio}}" style="background-image: url({{ 'no-image.png' | asset_url }});" title="No Product Image"></div>
+               </div>
             </div>
         {% endfor %}
 
@@ -38,15 +47,23 @@
 
         <div class="product-photo-carousel" id="product-photo-carousel-{{product.handle}}" data-toggle="modal-no-touch" data-backdrop="false" data-target="#product-photo-modal-{{product.handle}}">
             {% for image in product.images %}
-                <a class="product-photo-carousel-item">
-                    <div class="background-box {{settings.products_aspect_ratio}}" style="background-image: url({{ image | img_url: 'master' }});" title="{{ image.alt | escape }}"></div>
-                    {% if settings.products_show_page_number_in_carousel %}
-                        <div class="carousel-caption bottom right">
-                            <div class="carousel-caption-wrapper">
-                                {{ forloop.index }}/{{ forloop.length }}
+                {% if forloop.last %}
+                    {% comment %} This is the Colorcard {% endcomment %}
+                {% else %}
+                    <a class="product-photo-carousel-item">
+                        <div class="background-box {{settings.products_aspect_ratio}}" style="background-image: url({{ image | img_url: 'master' }});" title="{{ image.alt | escape }}"></div>
+                        {% if settings.products_show_page_number_in_carousel %}
+                            <div class="carousel-caption bottom right">
+                                <div class="carousel-caption-wrapper">
+                                    {{ forloop.index }}/{{ forloop.length }}
+                                </div>
                             </div>
-                        </div>
-                    {% endif %}
+                        {% endif %}
+                    </a>
+                {% endif %}
+            {% else %}
+                <a class="product-photo-carousel-item">
+                    <div class="background-box {{settings.products_aspect_ratio}}" style="background-image: url({{ 'no-image.png' | asset_url }});" title="No Product Image"></div>
                 </a>
             {% endfor %}
 
